# homeroute

./: .env  .env.example  .gitignore  .gitlab-ci.yml  AGENTS-PROGRESS.md  CLAUDE.md  HOMEROUTE-APPS.md  MIGRATION.md  Makefile  PIPELINE-TEST-CHECKLIST.md  PLAN-ENVIRONMENTS.md  README.md  REFONTE-DEV-EXPERIENCE.md  ecosystem.config.cjs  package-lock.json  package.json  tailwind.config.js
ca-service/: Cargo.toml
ca-service/src/: ca.rs  lib.rs  storage.rs  types.rs
crates/: Cargo.toml
crates/.claude/agent-memory/backend-rust/: MEMORY.md
crates/agents/env-agent/: Cargo.toml
crates/agents/env-agent/src/: app_proxy.rs  config.rs  connection.rs  context.rs  db_manager.rs  deploy.rs  discovery.rs  main.rs  mcp.rs  port_registry.rs  proxy.rs  scaffold.rs  scan.rs  secrets.rs  supervisor.rs
crates/agents/hr-agent/: Cargo.toml
crates/agents/hr-agent/src/: config.rs  dataverse.rs  main.rs  mcp.rs  mcp_instructions.txt  proxy.rs  update.rs  upgrade.rs
crates/agents/hr-cloud-relay/: Cargo.toml
crates/agents/hr-cloud-relay/src/: relay.rs
crates/agents/hr-host-agent/: Cargo.toml
crates/agents/hr-host-agent/src/: config.rs  main.rs  mcp.rs  registry.rs  ssh.rs
crates/api/homeroute/: Cargo.toml
crates/api/homeroute/src/: main.rs
crates/api/hr-api/: Cargo.toml
crates/api/hr-api/src/: container_manager.rs  lib.rs  middleware.rs  state.rs
crates/edge/hr-acme/src/: acme.rs  cloudflare.rs  lib.rs  storage.rs  types.rs
crates/edge/hr-auth/: Cargo.toml
crates/edge/hr-auth/examples/: hash_password.rs
crates/edge/hr-auth/src/: forward_auth.rs  middleware.rs  sessions.rs  users.rs
crates/edge/hr-auth/tests/: integration.rs
crates/edge/hr-edge/: Cargo.toml
crates/edge/hr-edge/src/: dns_route_sync.rs  ipc_handler.rs  main.rs
crates/edge/hr-proxy/: Cargo.toml
crates/edge/hr-proxy/src/: config.rs  env_routes.rs  handler.rs  lib.rs  metrics.rs  tls.rs
crates/edge/hr-tunnel/src/: crypto.rs  lib.rs  protocol.rs
crates/homeroute/: Cargo.toml
crates/homeroute/src/: main.rs  supervisor.rs
crates/hr-acme/src/: acme.rs  storage.rs
crates/hr-agent/: Cargo.toml
crates/hr-agent/src/: config.rs  connection.rs  dataverse.rs  ipv6.rs  main.rs  mcp.rs  powersave.rs  proxy.rs  scan.rs  services.rs  upgrade.rs
crates/hr-agent/src/studio/: credentials.rs  handler.rs  mod.rs  sessions.rs  static_files.rs  terminal.rs  todo_watcher.rs  types.rs  websocket.rs
crates/hr-api/: Cargo.toml
crates/hr-api/src/: container_manager.rs  lib.rs  state.rs
crates/hr-api/src/routes/: acme.rs  applications.rs  auth.rs  cloud_relay.rs  containers.rs  dataverse.rs  ddns.rs  dns.rs  dns_dhcp.rs  firewall.rs  git.rs  hosts.rs  mod.rs  network.rs  reverseproxy.rs  store.rs  updates.rs  ws.rs
crates/hr-auth/src/: users.rs
crates/hr-cloud-relay/: Cargo.toml
crates/hr-cloud-relay/src/: relay.rs
crates/hr-common/src/: config.rs  events.rs
crates/hr-container/src/: client.rs  rootfs.rs
crates/hr-dns/src/: lib.rs  resolver.rs  server.rs
crates/hr-firewall/: Cargo.toml
crates/hr-firewall/src/: config.rs  engine.rs  lib.rs  nftables.rs
crates/hr-git/: Cargo.toml
crates/hr-git/src/: github.rs  service.rs  types.rs
crates/hr-host-agent/: Cargo.toml
crates/hr-host-agent/src/: config.rs  main.rs
crates/hr-ipc/src/: client.rs  lib.rs  server.rs
crates/hr-ipv6/: Cargo.toml
crates/hr-ipv6/src/: config.rs  dhcpv6.rs  lib.rs  pd_client.rs  ra.rs
crates/hr-lxd/: Cargo.toml
crates/hr-lxd/src/: client.rs  lib.rs  profile.rs
crates/hr-netcore/: Cargo.toml
crates/hr-netcore/src/: handler.rs  main.rs  supervisor.rs
crates/hr-proxy/: Cargo.toml
crates/hr-proxy/src/: config.rs  handler.rs  tls.rs
crates/hr-registry/: Cargo.toml
crates/hr-registry/src/: cloudflare.rs  dataverse_claude_md.txt  lib.rs  protocol.rs  state.rs  types.rs
crates/hr-registry/src/rules/: homeroute-dataverse.md  homeroute-deploy-leptos.md  homeroute-deploy-nextjs.md  homeroute-deploy.md  homeroute-dev.md  homeroute-docs.md  homeroute-store.md  homeroute-studio-todos.md
crates/hr-servers/src/: monitoring.rs  scheduler.rs
crates/hr-tunnel/src/: protocol.rs
crates/hr-web/: Cargo.toml
crates/hr-web-client/: Cargo.toml
crates/hr-web-client/src/: lib.rs
crates/hr-web/src/: app.rs  lib.rs  types.rs  utils.rs
crates/hr-web/src/components/: button.rs  card.rs  icons.rs  layout.rs  mod.rs  page_header.rs  section.rs  status_badge.rs  toast.rs
crates/hr-web/src/islands/: login_form.rs  logout_button.rs  mod.rs
crates/hr-web/src/pages/: adblock.rs  applications.rs  certificates.rs  dashboard.rs  ddns.rs  dns_dhcp.rs  energy.rs  firewall.rs  login.rs  mod.rs  network.rs  not_found.rs  profile.rs  reverseproxy.rs  servers.rs  settings.rs  test.rs  updates.rs  users.rs  wol.rs
crates/hr-web/src/server_fns/: adblock.rs  applications.rs  auth.rs  certificates.rs  dashboard.rs  ddns.rs  dns_dhcp.rs  energy.rs  firewall.rs  (+9 more)
crates/hr-web/style/: input.css
crates/netcore/hr-dns/: Cargo.toml
crates/netcore/hr-ipv6/: Cargo.toml
crates/netcore/hr-netcore/: Cargo.toml
crates/orchestrator/hr-apps/: Cargo.toml
crates/orchestrator/hr-dataverse/: Cargo.toml
crates/orchestrator/hr-dataverse-migrate/: Cargo.toml
crates/orchestrator/hr-db/: Cargo.toml
crates/orchestrator/hr-dv-codegen/: Cargo.toml
crates/orchestrator/hr-dvexpr/: Cargo.toml
crates/orchestrator/hr-environment/: Cargo.toml
crates/orchestrator/hr-orchestrator/: Cargo.toml
crates/orchestrator/hr-pipeline/: Cargo.toml
crates/orchestrator/hr-registry/: Cargo.toml
crates/shared/hr-common/: Cargo.toml
crates/shared/hr-docs/: Cargo.toml
crates/shared/hr-ipc/: Cargo.toml
rust-dns-dhcp/: Cargo.toml
rust-dns-dhcp/src/: main.rs
rust-dns-dhcp/src/adblock/: api.rs  filter.rs  mod.rs
rust-dns-dhcp/src/config/: mod.rs
rust-dns-dhcp/src/dhcp/: lease_store.rs  mod.rs  packet.rs  server.rs  state_machine.rs
rust-dns-dhcp/src/dns/: cache.rs  mod.rs  packet.rs  resolver.rs  server.rs
rust-dns-dhcp/src/ipv6/: mod.rs
rust-dns-dhcp/src/shared/: mod.rs
rust-dns-dhcp/test-infra/: run-tests.sh  setup.sh  teardown.sh
(+502 files in other folders)
