[package]
name = "ca-service"
version = "0.1.0"
edition = "2024"

[dependencies]
rcgen = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
hex = "0.4"
time = "0.3"
