[package]
name = "rust-dns-dhcp"
version = "0.1.0"
edition = "2024"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework (for adblock API)
axum = "0.8"

# Configuration and serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Signal handling for hot-reload
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
tokio-stream = "0.1"

# Timestamps
chrono = { version = "0.4", features = ["serde"] }

# IP network parsing
ipnet = "2.9"

# Fast hash for adblock (74k domains)
rustc-hash = "2.1"

# Raw sockets for RA/DHCP
socket2 = { version = "0.5", features = ["all"] }

# Random for transaction IDs
rand = "0.9"

# Byte manipulation
bytes = "1.0"

# HTTP client for adblock list downloads
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
