[package]
name = "hr-netcore"
version.workspace = true
edition.workspace = true

[[bin]]
name = "hr-netcore"
path = "src/main.rs"

[dependencies]
hr-common = { path = "../hr-common" }
hr-dns = { path = "../hr-dns" }
hr-dhcp = { path = "../hr-dhcp" }
hr-ipv6 = { path = "../hr-ipv6" }
hr-adblock = { path = "../hr-adblock" }
hr-ipc = { path = "../hr-ipc" }

tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
signal-hook = { workspace = true }
signal-hook-tokio = { workspace = true }
tokio-stream = { workspace = true }
