[package]
name = "hr-web-client"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
hr-web = { path = "../hr-web", features = ["hydrate", "islands"] }
leptos = { workspace = true, features = ["hydrate", "islands"] }
wasm-bindgen = { workspace = true }
console_error_panic_hook = "0.1"
