[package]
name = "hr-web"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["rlib"]

[dependencies]
leptos = { workspace = true }
leptos_meta = { workspace = true }
leptos_router = { workspace = true }
leptos_axum = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }

# Server-side deps (only for SSR)
hr-common = { path = "../hr-common", optional = true }
hr-auth = { path = "../hr-auth", optional = true }
hr-analytics = { path = "../hr-analytics", optional = true }
hr-dns = { path = "../hr-dns", optional = true }
hr-dhcp = { path = "../hr-dhcp", optional = true }
hr-servers = { path = "../hr-servers", optional = true }
hr-system = { path = "../hr-system", optional = true }
hr-adblock = { path = "../hr-adblock", optional = true }
hr-registry = { path = "../hr-registry", optional = true }
hr-firewall = { path = "../hr-firewall", optional = true }
hr-acme = { path = "../hr-acme", optional = true }
hr-proxy = { path = "../hr-proxy", optional = true }
axum = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }

[features]
default = []
ssr = [
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "dep:leptos_axum",
    "dep:hr-common",
    "dep:hr-auth",
    "dep:hr-analytics",
    "dep:hr-dns",
    "dep:hr-dhcp",
    "dep:hr-servers",
    "dep:hr-system",
    "dep:hr-adblock",
    "dep:hr-registry",
    "dep:hr-firewall",
    "dep:hr-acme",
    "dep:hr-proxy",
    "dep:axum",
    "dep:tokio",
]
