[package]
name = "env-agent"
version = "0.1.0"
edition.workspace = true

[[bin]]
name = "env-agent"
path = "src/main.rs"

[dependencies]
hr-common = { path = "../../shared/hr-common" }
hr-registry = { path = "../../orchestrator/hr-registry" }
hr-environment = { path = "../../orchestrator/hr-environment" }
hr-db = { workspace = true }

tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
