[package]
name = "hr-agent"
version = "0.2.55"
edition.workspace = true

[[bin]]
name = "hr-agent"
path = "src/main.rs"

[dependencies]
hr-registry = { path = "../../orchestrator/hr-registry" }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
ring = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rustls = { workspace = true }
tokio-rustls = { workspace = true }
rustls-pemfile = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
http-body-util = { workspace = true }
bytes = { workspace = true }
base64 = { workspace = true }
rust-embed = { workspace = true }
notify = { workspace = true }
