[package]
name = "hr-edge"
version.workspace = true
edition.workspace = true

[[bin]]
name = "hr-edge"
path = "src/main.rs"

[dependencies]
hr-common = { path = "../../shared/hr-common" }
hr-auth = { path = "../hr-auth" }
hr-acme = { path = "../hr-acme" }
hr-proxy = { path = "../hr-proxy" }
hr-ipc = { path = "../../shared/hr-ipc" }
hr-tunnel = { path = "../hr-tunnel" }

uuid = { workspace = true }
quinn = { workspace = true }
bytes = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
signal-hook = { workspace = true }
signal-hook-tokio = { workspace = true }
tokio-stream = { workspace = true }
rustls = { workspace = true }
tokio-rustls = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
http-body-util = { workspace = true }
axum = { workspace = true }
