[package]
name = "hr-apps"
version.workspace = true
edition.workspace = true

[dependencies]
hr-common = { path = "../../shared/hr-common" }
hr-db = { workspace = true }
rusqlite = { workspace = true }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
nix = { version = "0.29", features = ["signal"] }
uuid = { workspace = true }

[dev-dependencies]
tempfile = "3"
