[package]
name = "hr-dataverse"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
rand = { workspace = true }

# Postgres driver — see workspace comment for why we don't use the sqlx meta-crate
sqlx-core = { workspace = true }
sqlx-postgres = { workspace = true }

async-graphql = { workspace = true }
