[package]
name = "hr-environment"
version.workspace = true
edition.workspace = true

[dependencies]
hr-common = { path = "../../shared/hr-common" }
hr-ipc = { path = "../../shared/hr-ipc" }
hr-registry = { path = "../hr-registry" }
hr-db = { path = "../hr-db" }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
toml = { workspace = true }
