[package]
name = "hr-orchestrator"
version.workspace = true
edition.workspace = true

[[bin]]
name = "hr-orchestrator"
path = "src/main.rs"

[dependencies]
hr-common = { path = "../../shared/hr-common" }
hr-ipc = { path = "../../shared/hr-ipc" }
hr-apps = { path = "../hr-apps" }
hr-dataverse = { workspace = true }
hr-dataverse-migrate = { path = "../hr-dataverse-migrate" }
hr-registry = { path = "../hr-registry" }
hr-container = { path = "../hr-container" }
hr-git = { path = "../hr-git" }
hr-acme = { path = "../../edge/hr-acme" }
hr-docs = { workspace = true }

tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true }
rustls = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
base64 = { workspace = true }
argon2 = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
hex = { workspace = true }
tower-http = { workspace = true }
