[package]
name = "hr-pipeline"
version.workspace = true
edition.workspace = true

[dependencies]
hr-common = { path = "../../shared/hr-common" }
hr-db = { path = "../hr-db" }
hr-environment = { path = "../hr-environment" }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
tempfile = "3"
